--- a/my_site/templates/logout.html
+++ b/my_site/templates/logout.html
@@ -1,9 +1,36 @@
-{% extends 'base_l.html' %}
+{% load staticfiles %}
+{% csrf_token %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Goodbye!</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+    <link href="/static/css/jumbotron-narrow.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 
-{% block title %}Goodbye!{% endblock %}
-{% block content %}
+</head>
+<body>
+<nav class="navbar navbar-default" style="position: static">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <div class="text-center">
+                <h3><a href="/main/1" class="link1"> Fashion is our profession </a></h3>
+            </div>
+        </div>
+    </div>
     <div class="jumbotron">
         <p class="user">We are waiting for you again!</p>
         <a href="/login">Sing in again</a>
     </div>
-{% endblock %}
+</nav>
+{% block content %}{% endblock %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="/static/js/bootstrap.js" type="text/javascript"></script>
+<script src="{% static 'js/maskedinput.js' %}"></script>
+<script src="{% static 'js/csrf.js' %}"></script>
+{% block javascript %}{% endblock %}
+</body>
+</html>
+
